force-app/main/default/objects/PMHR_Nuzlocke__c/PMHR_Nuzlocke__c.object-meta.xml
<CustomObject>
    <label>Nuzlocke</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nuzlockes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>