force-app/main/default/objects/PMHR_Nuzlocke__c/fields/AllowedCatchingMethodsPerArea__c.field-meta.xml
<CustomField>
    <fullName>AllowedCatchingMethodsPerArea__c</fullName>
    <label>Allowed Catching Methods / Area</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BreedingOnlyOnce</fullName>
                <label>Breeding (Only Once)</label>
            </value>
            <value>
                <fullName>BreedingAny</fullName>
                <label>Breeding (Any)</label>
            </value>
            <value>
                <fullName>BreedingOnePerParent</fullName>
                <label>Breeding (One/Parent)</label>
            </value>
            <value>
                <fullName>BreedingOnePerType</fullName>
                <label>Breeding (One/Type)</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>FossilOnlyOne</fullName>
                <label>Fossil (Only One)</label>
            </value>
            <value>
                <fullName>FossilAny</fullName>
                <label>Fossil (Any)</label>
            </value>
            <value>
                <fullName>GameCornerMax1</fullName>
                <label>Game Corner (Max 1)</label>
            </value>
            <value>
                <fullName>GameCornerMax2</fullName>
                <label>Game Corner (Max 2)</label>
            </value>
            <value>
                <fullName>GameCornerMax3</fullName>
                <label>Game Corner (Max 3)</label>
            </value>
            <value>
                <fullName>GameCornerMax4</fullName>
                <label>Game Corner (Max 4)</label>
            </value>
            <value>
                <fullName>GameCornerAny</fullName>
                <label>Game Corner (Any)</label>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
            <value>
                <fullName>GrassOrOverworld</fullName>
                <label>Grass/Overworld</label>
            </value>
            <value>
                <fullName>GrassOrWater</fullName>
                <label>Grass/Water</label>
            </value>
            <value>
                <fullName>Overworld</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Tree</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>WaterOrTree</fullName>
                <label>Water/Tree</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>