force-app/main/default/objects/PMHR_Nuzlocke__c/fields/GameVersion__c.field-meta.xml
<CustomField>
    <fullName>GameVersion__c</fullName>
    <formula>TEXT(Hero__r.GameVersion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game Version</label>
    <type>Text</type>
</CustomField>