force-app/main/default/objects/PMHR_Nuzlocke__c/fields/IsFinished__c.field-meta.xml
<CustomField>
    <fullName>IsFinished__c</fullName>
    <description>Indicate if Nuzlocke is finished</description>
    <formula>AND(
 NOT(ISBLANK(EndDate__c)),
 NOT(ISPICKVAL(Status__c, &apos;InProgress&apos;))
)</formula>
    <label>Finished</label>
    <type>Checkbox</type>
</CustomField>