force-app/main/default/objects/PMHR_Nuzlocke__c/fields/LegendariesRule__c.field-meta.xml
<CustomField>
    <fullName>LegendariesRule__c</fullName>
    <inlineHelpText>Rules regarding the Legendary Pokemon.</inlineHelpText>
    <label>Legendaries Rule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CatchNoUse</fullName>
                <label>Catch - no use</label>
            </value>
            <value>
                <fullName>CatchUse</fullName>
                <label>Catch - use</label>
            </value>
            <value>
                <fullName>Kill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>