force-app/main/default/objects/PMHR_Nuzlocke__c/fields/PokemonsCaught__c.field-meta.xml
<CustomField>
    <fullName>PokemonsCaught__c</fullName>
    <description>Number of caught Pokemons</description>
    <label>Pokemons Caught</label>
    <summaryForeignKey>PMHR_Pokemon__c.Nuzlocke__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>