force-app/main/default/objects/PMHR_Nuzlocke__c/fields/PokemonsDeceased__c.field-meta.xml
<CustomField>
    <fullName>PokemonsDeceased__c</fullName>
    <description>Number of Pokemons lost in battle</description>
    <label>Pokemons Deceased</label>
    <summaryFilterItems>
        <field>PMHR_Pokemon__c.IsDeceased__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PMHR_Pokemon__c.Nuzlocke__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>