force-app/main/default/objects/PMHR_Nuzlocke__c/fields/RivalName__c.field-meta.xml
<CustomField>
    <fullName>RivalName__c</fullName>
    <formula>Hero__r.RivalName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rival Name</label>
    <type>Text</type>
</CustomField>