force-app/main/default/objects/PMHR_Nuzlocke__c/fields/SafariZoneRule__c.field-meta.xml
<CustomField>
    <fullName>SafariZoneRule__c</fullName>
    <label>Safari Zone Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OnePerArea</fullName>
                <label>One/Area</label>
            </value>
            <value>
                <fullName>OnePerSafari</fullName>
                <label>One/Safari</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>