force-app/main/default/objects/PMHR_Nuzlocke__c/validationRules/End_Data_On_Insert.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Data_On_Insert</fullName>
    <active>true</active>
    <description>You can&apos;t provide end data (status/date) when creating new Nuzlocke.</description>
    <errorConditionFormula>AND(
 ISNEW(),
 OR(
  NOT(ISPICKVAL(Status__c, &apos;InProgress&apos;)),
  NOT(ISBLANK(EndDate__c))
 )
)</errorConditionFormula>
    <errorMessage>You can&apos;t provide end data (status/date) when creating new Nuzlocke.</errorMessage>
</ValidationRule>