force-app/main/default/objects/PMHR_Nuzlocke__c/validationRules/End_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Before_Start_Date</fullName>
    <active>true</active>
    <description>End Date can&apos;t be before Start Date</description>
    <errorConditionFormula>EndDate__c &lt; StartDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date can&apos;t be before Start Date</errorMessage>
</ValidationRule>