force-app/main/default/objects/PMHR_Nuzlocke__c/validationRules/No_Full_End_Data_Provided.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Full_End_Data_Provided</fullName>
    <active>true</active>
    <description>When finishing the Nuzlocke you have to provide both End Date and end Status.</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 OR(
  AND(
   NOT(ISBLANK(EndDate__c)),
   ISPICKVAL(Status__c, &apos;InProgress&apos;)
  ),
  AND(
   NOT(ISPICKVAL(Status__c, &apos;InProgress&apos;)),
   ISBLANK(EndDate__c)
  )
 )
)</errorConditionFormula>
    <errorMessage>When finishing the Nuzlocke you have to provide both End Date and end Status.</errorMessage>
</ValidationRule>