force-app/main/default/objects/PMHR_Nuzlocke__c/validationRules/Nuzlocke_Finished.validationRule-meta.xml
<ValidationRule>
    <fullName>Nuzlocke_Finished</fullName>
    <active>true</active>
    <description>Can&apos;t finish Nuzlocke that is already finished.</description>
    <errorConditionFormula>AND(
 PRIORVALUE(IsFinished__c),
 OR(
  AND(
   ISCHANGED(Status__c),
   NOT(ISPICKVAL(Status__c, &apos;InProgress&apos;))
  ),
  AND(
   ISCHANGED(EndDate__c),
   NOT(ISBLANK(EndDate__c))
  )
 )
)</errorConditionFormula>
    <errorMessage>Can&apos;t finish Nuzlocke that is already finished.</errorMessage>
</ValidationRule>