force-app/main/default/objects/PMHR_Nuzlocke__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GameVersion__c</columns>
    <columns>Hero__c</columns>
    <columns>AllowedCatchingMethodsPerArea__c</columns>
    <columns>SafariZoneRule__c</columns>
    <columns>LegendariesRule__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>