force-app/main/default/objects/PMHR_Nuzlocke__c/listViews/Finished_Nuzlockes.listView-meta.xml
<ListView>
    <fullName>Finished_Nuzlockes</fullName>
    <columns>NAME</columns>
    <columns>GameVersion__c</columns>
    <columns>Hero__c</columns>
    <columns>PokemonsCaught__c</columns>
    <columns>PokemonsDeceased__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IsFinished__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Finished Nuzlockes</label>
</ListView>