force-app/main/default/objects/PMHR_Nuzlocke__c/listViews/Ongoing_Nuzlockes.listView-meta.xml
<ListView>
    <fullName>Ongoing_Nuzlockes</fullName>
    <columns>NAME</columns>
    <columns>GameVersion__c</columns>
    <columns>Hero__c</columns>
    <columns>PokemonsCaught__c</columns>
    <columns>PokemonsDeceased__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IsFinished__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Ongoing Nuzlockes</label>
</ListView>